test/files/neg/t4425.check
t4425.scala:3: error: erroneous or inaccessible type
  42 match { case _ X _ => () }
                    ^
one error found
